--- a/index.html
+++ b/index.html
@@ -75,9 +75,15 @@
                         PARQUE GUEL
                     </div>
                     <div class="item" data-content="montserrat">
-                        MONTSERRAT
+                        MONTSERRAT<br/>
                     </div>
                 </div>
+                
+                <div class="row-wrap">
+                    <div class="row"></div>
+                    <span>SEGUIR</span>
+                </div>
+
     
                 <div class="ground"></div>
             </div>
