--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap" rel="stylesheet">
     </head>
     <body>
-        <p class="title">Ruta turistica en Autocaravana</p>
+        <p class="title">Ruta turistica en furgoneta</p>
 
         <div class="header">
             <div class="content">
